--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,23 +22,23 @@ endmacro()
 MyVKProject_SOURCES_APPEND(${MyVKProject_DIR_SOURCES})
 
 # Shaders
-# Compile shaders
-file(GLOB_RECURSE SHADER_SOURCES "${MyVKProject_DIR_SOURCES}/*.frag" "${MyVKProject_DIR_SOURCES}/*.vert")
-foreach(SHADER_SOURCE ${SHADER_SOURCES})
-    get_filename_component(SHADER_NAME ${SHADER_SOURCE} NAME)
-    set(SHADER_OUTPUT "${SHADER_OUTPUT_DIR}/${SHADER_NAME}.spv")
-    add_custom_command(
-        OUTPUT ${SHADER_OUTPUT}
-        COMMAND glslc ${SHADER_SOURCE} -o ${SHADER_OUTPUT}
-        DEPENDS ${SHADER_SOURCE}
-    )
-    list(APPEND SHADER_OUTPUTS ${SHADER_OUTPUT})
-endforeach()
+## Compile shaders
+#file(GLOB_RECURSE SHADER_SOURCES "${MyVKProject_DIR_SOURCES}/*.frag" "${MyVKProject_DIR_SOURCES}/*.vert")
+#foreach(SHADER_SOURCE ${SHADER_SOURCES})
+#    get_filename_component(SHADER_NAME ${SHADER_SOURCE} NAME)
+#    set(SHADER_OUTPUT "${SHADER_OUTPUT_DIR}/${SHADER_NAME}.spv")
+#    add_custom_command(
+#        OUTPUT ${SHADER_OUTPUT}
+#        COMMAND glslc ${SHADER_SOURCE} -o ${SHADER_OUTPUT}
+#        DEPENDS ${SHADER_SOURCE}
+#    )
+#    list(APPEND SHADER_OUTPUTS ${SHADER_OUTPUT})
+#endforeach()
 
-add_custom_target(
-    Shaders ALL
-    DEPENDS ${SHADER_OUTPUTS}
-)
+#add_custom_target(
+#    Shaders ALL
+#    DEPENDS ${SHADER_OUTPUTS}
+#)
 
 add_executable(
     ${PROJECT_NAME}
