--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_PREFIX_PATH "~/DEV/vcpkg/installed/arm64-osx/share/")
 set(MyVKProject_DIR_ROOT       ${CMAKE_CURRENT_LIST_DIR})
 set(MyVKProject_DIR_SOURCES    "${MyVKProject_DIR_ROOT}/src")
 set(SHADER_OUTPUT_DIR "${CMAKE_BINARY_DIR}/shaders")
+set(SHADER_INPUT_DIR "${MyVKProject_DIR_ROOT}/Shaders")
 
 project(MyVKProject 
     LANGUAGES CXX C
@@ -23,22 +24,22 @@ MyVKProject_SOURCES_APPEND(${MyVKProject_DIR_SOURCES})
 
 # Shaders
 ## Compile shaders
-#file(GLOB_RECURSE SHADER_SOURCES "${MyVKProject_DIR_SOURCES}/*.frag" "${MyVKProject_DIR_SOURCES}/*.vert")
-#foreach(SHADER_SOURCE ${SHADER_SOURCES})
-#    get_filename_component(SHADER_NAME ${SHADER_SOURCE} NAME)
-#    set(SHADER_OUTPUT "${SHADER_OUTPUT_DIR}/${SHADER_NAME}.spv")
-#    add_custom_command(
-#        OUTPUT ${SHADER_OUTPUT}
-#        COMMAND glslc ${SHADER_SOURCE} -o ${SHADER_OUTPUT}
-#        DEPENDS ${SHADER_SOURCE}
-#    )
-#    list(APPEND SHADER_OUTPUTS ${SHADER_OUTPUT})
-#endforeach()
+file(GLOB_RECURSE SHADER_SOURCES "${SHADER_INPUT_DIR}/*.frag" "${SHADER_INPUT_DIR}/*.vert")
+foreach(SHADER_SOURCE ${SHADER_SOURCES})
+    get_filename_component(SHADER_NAME ${SHADER_SOURCE} NAME)
+    set(SHADER_OUTPUT "${SHADER_OUTPUT_DIR}/${SHADER_NAME}.spv")
+    add_custom_command(
+        OUTPUT ${SHADER_OUTPUT}
+        COMMAND glslc ${SHADER_SOURCE} -o ${SHADER_OUTPUT}
+        DEPENDS ${SHADER_SOURCE}
+    )
+    list(APPEND SHADER_OUTPUTS ${SHADER_OUTPUT})
+endforeach()
 
-#add_custom_target(
-#    Shaders ALL
-#    DEPENDS ${SHADER_OUTPUTS}
-#)
+add_custom_target(
+    Shaders ALL
+    DEPENDS ${SHADER_OUTPUTS}
+)
 
 add_executable(
     ${PROJECT_NAME}
