feat(core(sound)): add Soloud
NO LONGER DEPRECATED????

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,9 @@ add_custom_target(CopyModels
     DEPENDS ${MODEL_OUTPUT_DIR}
 ) 
 
+# Soloud
+add_subdirectory("soloud/contrib/")
+
 
 add_executable(
     ${PROJECT_NAME}
